# tt-metal

.github/workflows/: pr-gate.yaml  smoke.yaml  upstream-tests.yaml
models/demos/llama3_subdevices/tests/: test_decoder_device_perf.py
models/demos/yolov9c/: README.md
models/demos/yolov9c/runner/: performant_runner_infra.py
models/experimental/sentence_bert/tests/: test_sentence_bert_e2e_performant.py
models/experimental/stable_diffusion_xl_base/: demo.py
tests/tt_metal/tt_fabric/system_health/: test_system_health.cpp
tests/ttnn/integration_tests/yolov9c/: test_ttnn_yolov9c.py
tests/ttnn/unit_tests/gtests/: CMakeLists.txt
tt_metal/: CMakeLists.txt
tt_metal/distributed/: fd_mesh_command_queue.cpp
tt_metal/hw/: CMakeLists.txt
tt_metal/impl/dispatch/: hardware_command_queue.cpp  topology.cpp
tt_metal/impl/dispatch/kernel_config/: fd_kernel.cpp
tt_metal/impl/program/: dispatch.cpp  dispatch.hpp  program.cpp  program_command_sequence.hpp
tt_metal/programming_examples/: CMakeLists.txt
tt_metal/programming_examples/rpsingh_examples/: add_2_integers_in_riscv_rpsingh.cpp
tt_metal/programming_examples/rpsingh_examples/add_2_integers_in_riscv/: add_2_integers_in_SFPU_rpsingh.cpp  add_2_integers_in_riscv_fast_dispatch_rpsingh.cpp  add_2_integers_in_riscv_rpsingh.cpp  add_2_integers_in_riscv_via_DRAM_rpsingh.cpp
tt_metal/programming_examples/rpsingh_examples/add_2_integers_in_riscv_cb/: add_2_integers_in_riscv_cb_rpsingh.cpp
ttnn/: CMakeLists.txt
ttnn/cpp/ttnn/deprecated/: CMakeLists.txt
ttnn/ttnn/examples/usage/: fast_tensor_add.py
(+41 files in other folders)
